<resources>
    <string name="app_name">LoginLayout</string>
    <string name="register">Register</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="log_out">Log Out</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="encrypt_password">Encrypt Password</string>
    <string name="share_password">Share Password with Ad partners</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>